# discord-squirrel

./: .gitignore  .gitmodules  CMakeLists.txt  build32.bat  build64.bat  linuxbuild.sh
include/: SqImports.h  sqrat.h  sqratimport.h
include/sqrat/: sqratAllocator.h  sqratArray.h  sqratClass.h  sqratClassType.h  sqratConst.h  sqratFunction.h  sqratGlobalMethods.h  sqratImpClass.h  sqratMemberMethods.h  sqratObject.h  sqratOverloadMethods.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratUtil.h  sqratVM.h
src/: CMakeLists.txt  CSession.cpp  CSession.hpp  ServerMember.cpp  ServerMember.hpp  User.cpp  User.hpp  includes.hpp  main.cpp  main.hpp  request.cpp  request.hpp
